--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "1.8-SNAPSHOT"
+    id "fabric-loom" version "1.10.1"
 }
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
@@ -44,6 +44,8 @@ dependencies {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
+
+// All modules included for 1.21.8 build
 
 processResources {
     def propertyMap = [
